--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.7.6",
     "morgan": "^1.9.1",
     "morgan-body": "^2.4.8"
   },
