--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint": "^6.5.1",
+    "eslint-plugin-react": "^7.16.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.6",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1",
     "morgan-body": "^2.4.8"
   },
