--- a/part4/blog-app/package.json
+++ b/part4/blog-app/package.json
@@ -15,11 +15,13 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint-plugin-jest": "^23.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
     "mongoose-unique-validator": "^2.0.3",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "cross-env": "^6.0.3",
