--- a/part7/blog-app/package.json
+++ b/part7/blog-app/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
+    "deploy": "git push heroku master",
     "watch": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "start:test": "cross-env NODE_ENV=test node index.js"
+    "start:test": "cross-env NODE_ENV=test node index.js",
+    "logs:prod": "heroku logs --tail"
   },
   "author": "",
   "license": "ISC",
